compiler/tests/fail/stack_allocation/x86-64/out_of_bounds_write.jazz
export fn main (reg ptr u64[1] r) -> reg ptr u64[1] {
  r[2] = 1;
  return r;
}
